fix: this.btn.btnNode rm

--- a/public/index.ejs
+++ b/public/index.ejs
@@ -13,7 +13,9 @@
       integrity="sha512-ZRv40llEogRmoWgZwnsqke3HNzJ0kiI0+pcMgiz2bxO6Ew1DVBtWjVn0qjrXdT3+u+pSN36gLgmJiiQ3cQtyzA=="
       crossorigin="anonymous" />
     <!-- If you need antd -->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/antd/3.26.8/antd.min.css" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/antd/4.16.13/antd.min.css"
+      integrity="sha512-mMUp3hoGatkf0K+rYJvTnDq03NjZgWJIwXdxS5zgvDgJo0jsPefQkX8rvpk8dZ+BygXslwbO+Lv2CvQtBWB0Sw=="
+      crossorigin="anonymous" referrerpolicy="no-referrer" />
   </head>
   <body>
     <main id="app"></main>
